load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "iefactory",
    srcs = ["internal_executor_factory.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/iefactory",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/sql/sessiondata",
        "//pkg/sql/sqlextratxnstate",
        "//pkg/sql/sqlutil",
    ],
)
