load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "systabidresolver",
    srcs = ["system_table_id_resolver.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/catalog/descs/systabidresolver",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/sql/catalog",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/catalog/descs",
        "//pkg/sql/catalog/descs/cftxn",
        "//pkg/sql/sqlutil",
    ],
)
